...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calendarContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/calendarToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.ToolbarTheme"
            android:background="@color/md_theme_background"
            app:titleTextColor="@color/md_theme_onBackground"
...
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="?attr/colorSurface"
        android:orientation="vertical">

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/main_nav_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:elevation="1dp"
            app:menu="@menu/main" />

...
