...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.mythrowaway.app.view.edit.NeoEditActivity">
    <!--    tools:context=".view.edit.EditMainFragment">-->

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSetExcludeDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/scheduleContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" />

            <ImageButton
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_add_circle_outline_primary_24dp" />
        </LinearLayout>
...
