<resources>
    <string name="day_sunday">日</string>
    <string name="day_monday">月</string>
    <string name="day_tuesday">火</string>
    <string name="day_wednesday">水</string>
    <string name="day_thursday">木</string>m
    <string name="day_friday">金</string>
    <string name="day_saturday">土</string>
    <string name="everymonth">毎月</string>
    <string-array name="list_weekday_select">
        <item>日曜日</item>
        <item>月曜日</item>
        <item>火曜日</item>
        <item>水曜日</item>
        <item>木曜日</item>
        <item>金曜日</item>
        <item>土曜日</item>
    </string-array>
    <string-array name="list_trash_select">
        <item>もえるゴミ</item>
        <item>もえないゴミ</item>
        <item>プラスチック</item>
        <item>ビン</item>
        <item>カン</item>
        <item>ペットボトル</item>
        <item>古紙</item>
        <item>粗大ごみ</item>
        <item>資源ごみ</item>
        <item>自分で入力</item>
    </string-array>

    <string-array name="list_trash_id_select">
        <item>burn</item>
        <item>unburn</item>
        <item>plastic</item>
        <item>bin</item>
        <item>can</item>
        <item>petbottle</item>
        <item>paper</item>
        <item>coarse</item>
        <item>resource</item>
        <item>other</item>
    </string-array>

    <string-array name="list_weekday_label">
        <item>日</item>
        <item>月</item>
        <item>火</item>
        <item>水</item>
        <item>木</item>
        <item>金</item>
        <item>土</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule_weekday">weekday</string>
    <string name="schedule_month">month</string>
    <string name="schedule_numOfWeek">biweek</string>
    <string name="schedule_evweek">evweek</string>
    <string name="tag_InputFragment">scheduleInputFragment</string>

    <string-array name="list_weeknum_select">
        <item>第1</item>
        <item>第2</item>
        <item>第3</item>
        <item>第4</item>
        <item>第5</item>
    </string-array>
    <string-array name="list_date_select">
        <item>1日</item>
        <item>2日</item>
        <item>3日</item>
        <item>4日</item>
        <item>5日</item>
        <item>6日</item>
        <item>7日</item>
        <item>8日</item>
        <item>9日</item>
        <item>10日</item>
        <item>11日</item>
        <item>12日</item>
        <item>13日</item>
        <item>14日</item>
        <item>15日</item>
        <item>16日</item>
        <item>17日</item>
        <item>18日</item>
        <item>19日</item>
        <item>20日</item>
        <item>21日</item>
        <item>22日</item>
        <item>23日</item>
        <item>24日</item>
        <item>25日</item>
        <item>26日</item>
        <item>27日</item>
        <item>28日</item>
        <item>29日</item>
        <item>30日</item>
        <item>31日</item>
    </string-array>
    <string name="text_trash_select">自分で入力</string>
    <string name="error_otherText_empty">10文字以内で入力してください</string>
    <string name="error_otherText_illegalCharacter">利用できない文字が含まれています</string>
    <string name="label_alarm_switch">ゴミ出し予定を通知する</string>
    <string name="label_everyday_check">ゴミ出しが無い日も通知する</string>
    <string name="label_notify_tomorrow_check">翌日のゴミ出しを通知する</string>
    <string name="label_time_text">毎日</string>
    <string name="title_alarm_dialog">今日出せるゴミ</string>
    <string name="title_alarm_dialog_tomorrow">明日出せるゴミ</string>
    <string name="text_explain_code">・表示された数字を共有したいデバイスから入力してください（有効期限は5分間です）</string>
    <string name="text_explain_code2">・共有先のデバイスではスケジュールの登録・修正・削除・共有の操作がすべて可能になります。</string>
    <string name="label_activation_code_text">認証コード</string>
    <string name="error_publish_activation_code">認証コードの発行に失敗しました</string>
    <string name="label_activate_button">認証</string>
    <string name="error_activate">認証コードに誤りがあります</string>
    <string name="label_add_button">追加</string>
    <string name="label_connect_button">共有</string>
    <string name="label_notification_button">通知</string>
    <string name="label_reload">リロード</string>
    <string name="label_dark_mode">ダークモード</string>
    <string name="content_description_dark_mode_switch">ダークモード切り替え</string>
    <string name="label_list_button">一覧</string>

    <string name="title_AddAndEdit">ゴミ出し予定の追加／修正</string>
    <string name="title_Connect">ゴミ出し予定の共有</string>
    <string name="title_PublishCode">認証コードの発行</string>
    <string name="title_Activate">共有の認証</string>
    <string name="text_explain_share_button">・他のデバイスとゴミ出し予定を共有できます</string>
    <string name="text_explain_share_button_2">・機種変更時もこちらの機能で対応できます</string>
    <string name="text_explain_activate_button">・他のデバイスのゴミ出し予定を取り込みます</string>
    <string name="text_explain_alexa_button">・アレクサ（Amazon Echo）のスキルを有効化します</string>
    <string name="text_explain_alexa_button_2">・スマートフォンに登録済みのゴミ出し予定をそのまま使えます</string>
    <string name="label_share_button">スケジュールを共有する</string>
    <string name="label_go_activation_button">スケジュールを取り込む</string>
    <string name="warn_need_schecule">（スケジュールの共有、アレクサとの連携には1つ以上のゴミ出し予定の登録が必要です）</string>
    <string name="description_alexa_button">Alexaと連携します</string>
    <string name="hint_activation_code_text">10桁の認証コードを入力</string>
    <string name="text_default_alarm_time">7:00</string>
    <string name="channel_name">net.my.throwtrash.AlarmReceiver</string>
    <string name="channel_description">今日のゴミ出しの通知アラーム</string>
    <string name="channel_name_schedule_search_import">ゴミ出し予定のAI取り込み</string>
    <string name="channel_description_schedule_search_import">ゴミ出し予定のAI取り込み結果を通知します</string>
    <string name="id_notify_alarm">alrm_notify</string>
    <string name="label_button_notification">通知設定</string>
    <string name="format_alarm_time">%1$02d:%2$02d</string>
    <string name="text_explain_code3">・共有の解除はできません。共有後にスケジュールを別々に管理したい場合はAndroidの設定からアプリーデータを消去してください。</string>
    <string name="label_toggle_thisweek">今週</string>
    <string name="label_toggle_nextweek">来週</string>
    <string name="label_text_evweek">隔週</string>
    <string name="label_text_evweek_recent">最近のゴミ出し日</string>
    <string name="label_interval_text">間隔</string>
    <string-array name="list_evweek_interval">
        <item>2週に1回</item>
        <item>3週に1回</item>
        <item>4週に1回</item>
    </string-array>
    <string name="label_weekday_text">曜日</string>
    <string name="of_text">の</string>
    <string name="label_of_exclude_day">の例外日を設定</string>
    <string name="label_exclude_month">月</string>
    <string name="label_exclude_day">日</string>
    <string name="text_save">保存</string>
    <string-array name="list_exclude_month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="app_link_uri">https://mobileapp.mythrowaway.net</string>
    <string name="text_account_link">アカウントリンクしています……</string>
    <string name="label_help_button">問い合わせ</string>
    <string name="url_error">https://backend.mythrowaway.net/500.html</string>
    <string name="menu_item_open_browser">Chromeで開く</string>
    <string name="label_user_id">ユーザーID</string>
    <string name="action_user">user_info</string>
    <string name="label_edit">編集</string>
    <string name="label_exception_days">例外日</string>
    <string name="label_share">共有・アレクサ</string>
    <string name="label_user">ユーザー情報</string>
    <string name="label_license">ライセンス</string>
    <string name="label_other">その他</string>
    <string name="label_terms">利用規約</string>
    <string name="label_privacy_policy">プライバシーポリシー</string>
    <string name="text_support_lwa"><u>アレクサアプリが起動しない場合はこちらのリンクを押してアカウントリンクを開始してください</u></string>
    <string name="label_close_button">閉じる</string>
    <string name="alt_description_googleplay_button">GooglePlay Link Button</string>
    <string name="addexcludedateDescription">addExcludeDate</string>
    <string name="label_publish">共有</string>
    <string name="label_import">取り込み</string>
    <string name="label_common_exclude_day">共通例外日</string>
    <string name="label_alexa">アレクサ</string>
    <string name="title_activity_oss_list">OssListActivity</string>

    <string name="text_title_trash_list">ゴミ出し予定一覧</string>"
    <string name="text_title_suffix_exclude_day_of_month">の例外日設定</string>
    <string name="text_title_exclude_day_of_month">例外日の設定</string>
    <string name="text_title_common_exclude_day_of_month">共通例外日の設定</string>

    <string name="text_exclude_day_of_month_button">例外日を設定</string>
    <string name="text_common_exclude_day_button">共通例外日を設定</string>
    <string name="text_exclude_day_of_month_apply_button">設定</string>
    <string name="text_register_trash_button">登録</string>
    <string name="text_cancel_register_trash_button">キャンセル</string>
    <string name="text_trash_name_input_placeholder">ゴミの名前を入力</string>
    <string name="text_weekday_toggle_button">毎週</string>
    <string name="text_monthly_toggle_button">毎月</string>
    <string name="text_ordinal_weekday_toggle_button">固定の週と曜日</string>
    <string name="text_interval_weekday_toggle_button">隔週</string>

    <string name="message_noneTrash">今日出せるゴミはありません。</string>
    <string name="message_noneTrash_tomorrow">明日出せるゴミはありません。</string>
    <string name="message_invalid_input_trash_name_empty">ゴミの名前を入力してください</string>
    <string name="message_invalid_input_trash_name_invalid_char">利用できない文字が含まれています</string>
    <string name="message_invalid_input_trash_name_too_long">10文字以内で入力してください</string>
    <string name="message_complete_activation">認証されました。スケジュールを同期します。</string>
    <string name="message_complete_save_trash">ゴミ出し予定を登録しました</string>
    <string name="message_failed_save_trash">ゴミ出し予定の登録に失敗しました</string>
    <string name="message_failed_save_trash_exceed_max_schedule_count">登録に失敗しました。登録可能なゴミ出し予定は最大で10個までです。</string>
    <string name="message_failed_load_trash_list">一覧の読み込みに失敗しました</string>
    <string name="message_complete_delete_trash">ゴミ出し予定を削除しました</string>
    <string name="message_failed_delete_trash">ゴミ出し予定の削除に失敗しました</string>
    <string name="text_common_exclude_day_notice_line1">この画面の設定は全てのゴミに適用されます</string>
    <string name="text_common_exclude_day_notice_line2">個別の設定が必要な場合は各ゴミの登録画面から設定してください</string>
    <string name="text_trash_list_empty">登録されたゴミがありません</string>
    <string name="title_schedule_search_import_dialog">AI取り込み（β）</string>
    <string name="label_schedule_search_input">郵便番号またはおおよその住所</string>
    <string name="label_schedule_search_execute_button">実行</string>
    <string name="label_schedule_search_import_button">AI取り込み（β）</string>
    <string name="text_schedule_search_notice_link">留意事項</string>
    <string name="text_schedule_search_notice_suffix">を読み、詳細な住所を入力しないようにしてください</string>
    <string name="title_schedule_search_notice_dialog">留意事項</string>
    <string name="text_schedule_search_notice">・AI取り込み機能であるため誤りを含む可能性があります。\n・現在登録済みのデータは削除されます。\n・住所を入力する際は番地等の詳細は入力しないでください。町名や丁目など、自治体で定められたゴミ出し予定の判別に必要十分な粒度で入力してください（例: 東京都新宿区西新宿2丁目）。\n・入力された情報はアプリ提供者側で一切保存・流用しません。また当機能に利用するAIは入力データの学習を無効化していますが、万が一当機能へのデータ入力により何らかの損害が発生した場合でもアプリ提供者は一切の責任を負いかねますのでご了承ください。</string>
    <string name="message_schedule_search_import_started">AI取り込みには数分かかる可能性があります。結果はゴミ出し予定一覧画面を開いて確認してください。</string>
    <string name="title_schedule_search_import_notification_success">ゴミ出し予定のAI取り込みが完了しました</string>
    <string name="title_schedule_search_import_notification_failure">ゴミ出し予定のAI取り込みに失敗しました</string>

    <string name="testTag_add_schedule_button">AddScheduleButton</string>
    <string name="testTag_delete_schedule_button">DeleteScheduleButton</string>
    <string name="testTag_register_trash_button">RegisterTrashButton</string>
    <string name="testTag_common_exclude_day_button">CommonExcludeDayButton</string>
    <string name="testTag_trash_type_dropdown">TrashTypeDropdown</string>
    <string name="testTag_trash_name_input">TrashNameInput</string>
    <string name="testTag_weekday_of_weekly_dropdown">WeekdayOfWeeklyDropdown</string>
    <string name="testTag_day_of_month_of_monthly_dropdown">DayOfMonthOfMonthlyDropdown</string>
    <string name="testTag_order_of_ordinal_weekly_dropdown">OrderOfOrdinalWeeklyDropdown</string>
    <string name="testTag_weekday_of_ordinal_weekly_dropdown">WeekdayOfOrdinalWeeklyDropdown</string>
    <string name="testTag_interval_of_interval_weekly_dropdown">IntervalOfIntervalWeeklyDropdown</string>
    <string name="testTag_weekday_of_interval_weekly_dropdown">WeekdayOfIntervalWeeklyDropdown</string>
    <string name="testTag_month_of_exclude_day_of_month_dropdown">MonthOfExcludeDayOfMonthDropdown</string>
    <string name="testTag_day_of_exclude_day_of_month_dropdown">DayOfExcludeDayOfMonthDropdown</string>
    <string name="testTag_add_exclude_day_of_month_button">AddExcludeDayOfMonthButton</string>
    <string name="testTag_add_common_exclude_day_button">AddCommonExcludeDayButton</string>
    <string name="testTag_delete_exclude_day_of_month_button">DeleteExcludeDayOfMonthButton</string>
    <string name="testTag_suffix_dropdown_menu_item">MenuItem</string>
    <string name="testTag_trash_list_item">TrashListItem</string>
    <string name="testTag_copy_trash_button">CopyTrashButton</string>
    <string name="testTag_schedule_search_import_button">ScheduleSearchImportButton</string>
    <string name="testTag_schedule_search_input">ScheduleSearchInput</string>
    <string name="testTag_schedule_search_execute_button">ScheduleSearchExecuteButton</string>
    <string name="testTag_schedule_search_cancel_button">ScheduleSearchCancelButton</string>
    <string name="testTag_schedule_search_notice_link">ScheduleSearchNoticeLink</string>

    <string name="description_add_schedule_icon">ゴミ出し予定のスケジュールを追加</string>
    <string name="description_copy_trash_icon">ゴミ出し予定をコピー</string>
</resources>
